--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -12,12 +12,24 @@
     background-color: var(--primary-color);
 }
 
+.bg-pblue {
+    background-color: var(--primary-blue);
+}
+
 .bg-black {
     background-color: #000;
 }
 
 .bg-gray-footer {
     background-color: var(--gray-footer);
+}
+
+.bg-gray2 {
+    background-color: var(--gray-footer-btn);
+}
+
+.text-gray2 {
+    color: var(--gray-footer-btn)
 }
 
 .text-prim {
@@ -28,22 +40,15 @@
     color: var(--light-gray);
 }
 
-.text-shadow {
+.text-shadow1 {
     text-shadow: 2px 2px 2px black;
 }
 
-.top {
-    height: 25vw;
-    background-image: url(../Images/group-1.jpg);
-    background-position: 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
+.text-shadow2 {
+    text-shadow: 2px 2px var(--primary-purple);
 }
 
-.top div.card {
-    width: 50%;
-}
-
+.title-icon,
 .footer-icon,
 .header-icon {
     width: 30px;
@@ -60,6 +65,12 @@
     list-style-type: none;
     justify-content: center;
 }
+
+
+/** header **/
+
+
+/** footer **/
 
 .footer-link li {
     padding: 0.2rem;
@@ -83,3 +94,104 @@
     width: 100%;
     position: relative;
 }
+
+
+/********************** Dans index.html *****************************/
+
+.top {
+    min-width: 370px;
+    min-height: 500px;
+    height: 25vw;
+    background-image: url(../Images/group-1.jpg);
+    background-position: 45%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.top div.card {
+    width: 50%;
+    min-width: 300px;
+}
+
+.bg-md-white {
+    background-color: white;
+}
+
+.groupr-i {
+    width: 200px;
+    height: 200px;
+}
+
+#email {
+    border: 1px solid var(--light-gray);
+}
+
+input[type="email"]::placeholder {
+    color: var(--light-gray)
+}
+
+@media screen and (max-width:768px) {
+    header div a {
+        padding: 1rem;
+    }
+    .top {
+        justify-content: flex-end;
+    }
+    .top .input-group {
+        flex-direction: column;
+    }
+    .top .form-control {
+        width: 100%;
+    }
+    .top form input[type="text"]::placeholder {
+        text-align: center;
+        font-weight: bold;
+    }
+    .top a.btn {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        font-size: 2.25rem;
+    }
+    .order-1>.line,
+    .order-2>.line,
+    .order-3>.line {
+        width: 100%;
+        padding: 15%;
+        min-width: 370px;
+        min-height: 200px;
+        height: auto!;
+        border-radius: 8vh;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+    }
+    .order-1>.line {
+        background-image: url("../Images/group-3.jpg");
+    }
+    .order-2>.line {
+        background-image: url("../Images/group-2.jpg");
+    }
+    .order-3>.line {
+        background-image: url("../Images/group-4.jpg");
+    }
+    div[class*="order-"]>.line p,
+    div[class*="order-"]>.line h4,
+    div[class*="order-"]>.line a {
+        font-size: 2.25rem;
+        line-height: 1;
+        font-weight: bold;
+        text-shadow: 2px 2px 2px black;
+    }
+    div[class*="order-"]>.line a {
+        padding: 0;
+    }
+    .footer-icon {
+        width: 20px;
+        height: 20px;
+    }
+    .bottom-link li {
+        padding-left: 0.5rem;
+    }
+}
+
+
+/****************** About ******************/
