--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
-:root {
+ :root {
     --primary-color: #d35649;
     --primary-gray: #98a5a5;
     --primary-blue: #509bd7;
@@ -12,7 +12,8 @@
 
 /** FONT **/
 
-.font-pt {
+.font-pt,
+body {
     font-family: 'PT Sans', sans-serif;
 }
 
@@ -74,7 +75,11 @@
 }
 
 .text-shadow2 {
-    text-shadow: 2px 2px var(--primary-purple);
+    text-shadow: 2px 2px 2px var(--primary-purple);
+}
+
+.text-shadow3 {
+    text-shadow: 2px 2px 2px white;
 }
 
 
@@ -128,8 +133,7 @@
     height: 1rem;
 }
 
-.bottom-link,
-.footer-link {
+.link-list-row {
     margin: 0;
     padding: 0;
     display: flex;
@@ -143,33 +147,83 @@
     list-style-type: none;
 }
 
-.footer-link li {
-    padding: 0.2rem;
-    border-top: 3px solid white;
-    border-bottom: 3px solid white;
+
+/** HEADER **/
+
+.header-link svg {
+    display: inline-block;
 }
 
-.bottom-link li {
-    padding-left: 2rem;
+.header-link:hover * {
+    color: var(--primary-gray);
+    fill: var(--primary-gray);
+}
+
+
+/** FOOTER **/
+
+.footer-link a {
+    color: #eee;
+}
+
+.footer-link a:hover {
+    color: var(--primary-gray);
+    fill: var(--primary-gray)
+}
+
+.footer-link-1 {
+    text-decoration: none;
+}
+
+.footer-link-1:hover {
+    color: var(--primary-color);
+    text-decoration: underline;
+}
+
+#localisation:hover {
+    fill: var(--primary-gray)
 }
 
 #localisation {
     width: 80px;
     height: 80px;
-    border-radius: 50%;
-    border: 3px solid white;
-    vertical-align: baseline;
     fill: white;
+    border-radius: 50%;
+    vertical-align: baseline;
+    border: 2px solid var(--primary-gray);
 }
 
-#localisation img {
-    top: 10%;
-    width: 100%;
-    position: relative;
+.border-y {
+    border-top: 2px solid var(--primary-gray);
+    border-bottom: 2px solid var(--primary-gray);
+}
+
+.footer-link-2:hover svg {
+    fill: var(--primary-blue)
+}
+
+footer form {
+    max-width: 250px;
+    display: block;
+    margin: auto;
+}
+
+footer input.form-control {
+    max-width: 60%!important;
+}
+
+#email {
+    width: 80%;
+    color: white;
+    border: 1px solid var(--primary-gray);
+}
+
+input[type="email"]::placeholder {
+    color: var(--light-gray);
 }
 
 
-/********************** Dans index.html *****************************/
+/** INDEX **/
 
 .top {
     height: 25vw;
@@ -195,16 +249,8 @@
     height: 200px;
 }
 
-#email {
-    border: 1px solid var(--light-gray);
-}
 
-input[type="email"]::placeholder {
-    color: var(--light-gray);
-}
-
-
-/*****  search.hml ******/
+/*****  SEARCH ******/
 
 .result {
     gap: 1.5rem;
@@ -221,18 +267,35 @@ input[type="email"]::placeholder {
     background-image: url("../Images/group-2.svg"), linear-gradient(var(--primary-color), var(--primary-color));
 }
 
+
+/** ABOUT **/
+
+.link-search {
+    display: inline-block;
+    height: 100%;
+}
+
+.more-details {
+    width: 100%;
+    font-size: 2rem;
+    letter-spacing: 1rem;
+}
+
+.more-details:hover {
+    text-decoration: underline;
+}
+
 iframe {
     width: 100%;
     height: 450px;
 }
 
 @media screen and (max-width:768px) {
-    .gcol-4 {
-        grid-column: span 12;
-    }
+    /* HEADER */
     header div a {
         padding: 1rem;
     }
+    /* Bare de recherche au dessus du navbar */
     .top {
         justify-content: flex-end;
     }
@@ -241,16 +304,24 @@ iframe {
     }
     .top .form-control {
         width: 100%;
+        border-radius: 0.25rem!important;
+        border: 2px solid var(--gray-footer-btn);
     }
-    .top form input[type="text"]::placeholder {
-        text-align: center;
+    .top input[type="text"]::placeholder {
         font-weight: bold;
+        text-align: center;
+    }
+    .top input[type="submit"] {
+        line-height: 2.5;
+        padding: 1rem auto;
+        text-transform: uppercase;
     }
     .top a.btn {
+        font-size: 2rem;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
-        font-size: 2.25rem;
     }
+    /* INDEX */
     .order-1>.line,
     .order-2>.line,
     .order-3>.line {
@@ -272,6 +343,9 @@ iframe {
     .order-3>.line {
         background-image: url("../Images/group-4.jpg");
     }
+    div[class*="order-"]>.line a {
+        padding: 0;
+    }
     div[class*="order-"]>.line p,
     div[class*="order-"]>.line h4,
     div[class*="order-"]>.line a {
@@ -280,14 +354,11 @@ iframe {
         font-weight: bold;
         text-shadow: 2px 2px 2px black;
     }
-    div[class*="order-"]>.line a {
-        padding: 0;
+    .bg-md-white {
+        background-color: inherit;
     }
-    .footer-icon {
-        width: 20px;
-        height: 20px;
-    }
-    .bottom-link li {
-        padding-left: 0.5rem;
+    /* SEARCH*/
+    .gcol-4 {
+        grid-column: span 12;
     }
 }
