--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -222,6 +222,11 @@ input[type="email"]::placeholder {
     color: var(--light-gray);
 }
 
+footer .link-list-row {
+    flex-wrap: wrap;
+    justify-content: start;
+}
+
 
 /** INDEX **/
 
@@ -230,14 +235,14 @@ input[type="email"]::placeholder {
     min-width: 370px;
     min-height: 500px;
     background-size: cover;
-    background-position: 45%;
+    background-position: center;
     background-repeat: no-repeat;
     background-image: url(../Images/group-1.jpg);
 }
 
 .top div.card {
     width: 50%;
-    min-width: 300px;
+    min-width: 260px;
 }
 
 .bg-md-white {
@@ -295,7 +300,7 @@ iframe {
     header div a {
         padding: 1rem;
     }
-    /* Bare de recherche au dessus du navbar */
+    /* Bare de recherche au dessous du navbar */
     .top {
         justify-content: flex-end;
     }
@@ -313,7 +318,8 @@ iframe {
     }
     .top input[type="submit"] {
         line-height: 2.5;
-        padding: 1rem auto;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
         text-transform: uppercase;
     }
     .top a.btn {
@@ -326,22 +332,25 @@ iframe {
     .order-2>.line,
     .order-3>.line {
         width: 100%;
-        padding: 15%;
-        height: auto;
-        min-width: 370px;
-        min-height: 200px;
-        border-radius: 8vh;
+        padding: 1.5rem;
+        min-height: 300px;
+        border-radius: 2rem;
         background-size: 100% 100%;
+        background-position: center;
         background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
     }
     .order-1>.line {
-        background-image: url("../Images/group-3.jpg");
+        background-image: url("../Images/group-4.jpg");
     }
     .order-2>.line {
         background-image: url("../Images/group-2.jpg");
     }
     .order-3>.line {
-        background-image: url("../Images/group-4.jpg");
+        background-image: url("../Images/group-3.jpg");
     }
     div[class*="order-"]>.line a {
         padding: 0;
@@ -349,7 +358,7 @@ iframe {
     div[class*="order-"]>.line p,
     div[class*="order-"]>.line h4,
     div[class*="order-"]>.line a {
-        font-size: 2.25rem;
+        font-size: 1.5rem;
         line-height: 1;
         font-weight: bold;
         text-shadow: 2px 2px 2px black;
